# ros2-architecture-lab

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
bipedal_robot_pkg/behaviour_tree/launch/: bipedal_robot_application.py
bipedal_robot_pkg/behaviour_tree/nodes/: tree_factory.py
bipedal_robot_pkg/behaviour_tree/nodes/actions/: idle_behaviour.py  walk_forward_behaviour.py
bipedal_robot_pkg/behaviour_tree/nodes/conditions/: can_walk.py  must_walk.py
bipedal_robot_pkg/behaviour_tree/patterns/: all_patterns.yaml  idle_pattern.yaml  walk_forward_pattern.yaml
bipedal_robot_pkg/ros_nodes/action_publishers/: idle_publisher.py  walk_forward_publisher.py
bipedal_robot_pkg/ros_nodes/actuators/: left_leg_node.py  right_leg_node.py
bipedal_robot_pkg/ros_nodes/controller/: behaviour_command_interface.py  condition_service_node.py  movement_controller_node.py
bipedal_robot_pkg/ros_nodes/evaluators/: can_walk_evaluator.py  must_walk_evaluator.py
bipedal_robot_pkg/ros_nodes/logger/: status_logger_node.py
bipedal_robot_pkg/ros_nodes/loggers/: logging_factory.py  status_logger_node.py
bipedal_robot_pkg/ros_nodes/sensors/: battery_monitor_node.py  imu_sensor_node.py  laser_sensor_node.py
srv/: SetCondition.srv
