<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bipedal_robot_pkg</name>
  <version>0.1.0</version>
  <description>ROS2 package implementing a bipedal robot behaviour tree framework for research and simulation.</description>
  <maintainer email="marvinmail06@gmail.com">Marvin</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>py_trees</depend>
  <depend>py_trees_ros</depend>
  <depend>pyyaml</depend>
  <depend>python3-logging</depend>
  <depend>python3-json-logger</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
